Fix Mag declination in CSS for dark mode

--- a/src/css/tabs/gps.less
+++ b/src/css/tabs/gps.less
@@ -53,6 +53,18 @@
 		.line {
 			clear: left;
 		}
+		input {
+			float: left;
+			width: 90px;
+			height: 20px;
+			margin: 0 10px 5px 0;
+			padding-left: 5px;
+			padding-right: 5px;
+			border: 1px solid var(--subtleAccent);
+			border-radius: 3px;
+			background: var(--boxBackground);
+			color: var(--defaultText);
+		}
 		select {
 			float: left;
 			width: 100px;
